通过pubsub-js消息组件,订阅和发布消息

--- a/05-2_srcgit查询示例/components/List/index.css
+++ b/05-2_srcgit查询示例/components/List/index.css
@@ -25,6 +25,6 @@
 
 .row {
     word-spacing: 100px;
-    color: lightseagreen;
-    margin-left: 35px;
+    color: rgb(226, 65, 15);
+    margin-left: 100px;
 }
