--- a/src/components/Search/index.css
+++ b/src/components/Search/index.css
@@ -24,7 +24,7 @@
 }
 
 .row {
-    word-spacing: 100px;
-    color: lightseagreen;
+    word-spacing: 1px;
+    color: orangered;
     margin-left: 35px;
 }
